--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -728,9 +728,9 @@ div.noOrg-container span {
   width:350px;
   max-width: 100%;
 }
-#createProfileForm .btn-tnth-back {
-   margin-left: 3.5em;
- }
+#createProfileForm input[type="text"], #createProfileForm select{
+  height: 40px !important;
+}
 #noEmailContainer {
   margin-top: 0.3em;
 }
@@ -749,7 +749,8 @@ div.noOrg-container span {
 }
 .create-account-container {
   padding: 3.5em 4em;
-  width: 90%;
+  width: 100%;
+  max-width: 100%;
 }
 .left-indent-bottom {
   margin-left: 3.2em;
