patients list fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -128,8 +128,18 @@ div.orglist-selector {
   border-radius: 4px;
   font-size: 0.9em;
 }
+#adminTableToolbar #orglist-footer-container {
+  padding: 0 0.5em;
+  width: 250px;
+  max-width: 100%;
+  margin: 0 auto;
+ label {
+  font-weight: normal;
+  }
+};
+
 #adminTableToolbar div.dropdown-menu {
-  max-height: 500px;
+  max-height: 550px;
   transition: height 300ms ease-in;
 }
 #adminTableToolbar div.org-container {
