--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -58,7 +58,7 @@
              class="tnth-admin-table"
              data-classes="table table-hover table-condensed table-striped table-responsive"
              data-toggle="table"
-             data-sort-name="userid"
+             data-sort-name="id"
              data-sort-order="desc"
              data-search="true"
              data-pagination="true"
