--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -99,13 +99,13 @@ div.orglist-selector {
 }
 #adminTableToolbar #orglist-footer-container {
   padding: 0 0.5em;
-  width: 200px;
+  width: 250px;
   max-width: 100%;
   margin: 0 auto;
-}
-#adminTableToolbar #orglist-footer-container label {
+ label {
   font-weight: normal;
-}
+  }
+};
 #adminTableToolbar div.org-container {
   display: block;
   margin: -0.1em 0 -0.2em 0;
