patients list filter menu css fixes and button code fixes, card-view fixes

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -79,9 +79,16 @@ div.orglist-selector {
 #adminTableToolbar #orglist-footer-container label {
   font-weight: normal;
 }
+#adminTableToolbar #orglist-footer-container input[type="checkbox"] {
+  position: relative;
+  top: -1px;
+}
 #adminTableToolbar div.org-container {
   display: block;
   margin: -0.1em 0 -0.2em 0;
+}
+#adminTable div.card-view {
+  display: flex;
 }
 div.orglist-selector div.dropdown-menu #userOrgs {
   width: 300px;
