--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -105,9 +105,16 @@ div.orglist-selector {
 #adminTableToolbar #orglist-footer-container label {
   font-weight: normal;
 }
+#adminTableToolbar #orglist-footer-container input[type="checkbox"] {
+  position: relative;
+  top: -1px;
+}
 #adminTableToolbar div.org-container {
   display: block;
   margin: -0.4em 0;
+}
+#adminTable div.card-view {
+  display: flex;
 }
 div.orglist-selector div.dropdown-menu #userOrgs {
   width: 300px;
