--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -133,10 +133,14 @@ div.orglist-selector {
   width: 250px;
   max-width: 100%;
   margin: 0 auto;
- label {
-  font-weight: normal;
+  label {
+    font-weight: normal;
   }
-};
+  input[type="checkbox"] {
+    position: relative;
+    top: -1px;
+  }
+}
 
 #adminTableToolbar div.dropdown-menu {
   max-height: 550px;
@@ -145,6 +149,9 @@ div.orglist-selector {
 #adminTableToolbar div.org-container {
   display: block;
   margin: -0.4em 0;
+}
+#adminTable div.card-view {
+  display: flex;
 }
 div.orglist-selector div.dropdown-menu #userOrgs {
   width: 280px;
