add error message display, remove unused code

--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -76,6 +76,9 @@
 
   </form>
   </div>
+  <div>
+    <div class="error-message text-danger"></div>
+  <div>
 
 {% endblock %}
 {% block document_ready %}
