--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -893,6 +893,7 @@ table.profile-audit-log TH,
   padding: 0.5em;
   border-radius: 4px;
   text-align: left;
+  color: #a94442;
 }
 .report-error-message {
   color: red;
