updating comments, tests, etc

--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -358,7 +358,7 @@
               if (show) {
                   VO.showLoader();
               } else {
-                  {% if user and (not user.has_role("provider")) and (not user.has_role("admin")) %} filterMenu(); {% else %} VO.hideLoader(); {% endif %}
+                  {% if user and (not user.has_role(ROLE.STAFF)) and (not user.has_role("admin")) %} filterMenu(); {% else %} VO.hideLoader(); {% endif %}
                   VO.showMain();
               };
           };
