GIL fixes - change terms-of-use, legal pages to get content from LR, add copyright info, css fixes

--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -117,6 +117,7 @@
             </a>
           </div>
           <a class="logo" href="{{PORTAL}}/"></a>
+          <p class="copyright">©2017 Movember Foundation.  All rights reserved. A registered 501(c)3 non-profit organization.</p>
           {% if not user %}
             <div class="header__meta"><a href="#" class="menu button button--small button--white" data-toggle="modal" data-target="#modal-login">Log In</a><a href="#" class="menu button button--small button--white" data-toggle="modal" data-target="#modal-register">Join Us</a></div>
           {% endif %}
@@ -153,7 +154,7 @@
         </ul>
         <ul class="nav-list nav-list--lower">
           <li class="nav-list__item"><a href="{{PORTAL}}/terms-and-conditions">Terms and Conditions</a></li>
-          <li class="nav-list__item"><a href="{{PORTAL}}/legal">Legal</a></li>
+          <li class="nav-list__item"><a href="{{PORTAL}}/legal">Privacy</a></li>
           <li class="nav-list__item"><a href="{{PORTAL}}/contact">Contact</a></li>
         </ul>
         <div class="footer__logo-area"><a href="http://www.movember.com" target="_blank">
