--- a/portal/templates/gil/portal.html
+++ b/portal/templates/gil/portal.html
@@ -56,7 +56,7 @@
         </ul>
         <ul class="nav-list nav-list--lower">
           <li class="nav-list__item"><a href="{{PORTAL}}/terms-and-conditions">Terms and Conditions</a></li>
-          <li class="nav-list__item"><a href="{{PORTAL}}/legal">Legal</a></li>
+          <li class="nav-list__item"><a href="{{PORTAL}}/legal">Privacy</a></li>
           <li class="nav-list__item"><a href="{{PORTAL}}/contact">Contact</a></li>
         </ul>
         <div class="footer__logo-area"><a href="http://www.movember.com" target="_blank">
