--- a/portal/static/css/gil.css
+++ b/portal/static/css/gil.css
@@ -5491,7 +5491,7 @@ a:hover {
     padding: 25px 80px;
     position: fixed;
     top: 0;
-    height: 92px;
+    height: 132px;
     background: #fff;
     z-index: 1500;
 }
@@ -5571,6 +5571,10 @@ a:hover {
     margin-left: -66px;
     margin-top: -8px;
 }
+.is-scrolled .header .copyright {
+   margin-top: -3em;
+}
+
 @media (max-width: 899px) {
     .header .logo {
         margin-left: -66px;
@@ -7010,6 +7014,24 @@ a.home--modal-link {
     font-size: 1em;
 }
 
+.copyright {
+    width: 550px;
+    margin: 0 auto;
+    opacity: 0.7;
+    font-size: 0.85em;
+    color: #d2d1c5;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 12.5em;
+    max-width: 100%;
+    text-align: center;
+}
+.page-home .copyright, .is-scrolled .header .copyright {
+    color: #7c959e;
+    opacity: 0.5;
+}
 @media (min-width: 1200px) {
     .home--item-container {
         width: 542px;
@@ -7046,6 +7068,11 @@ a.home--modal-link {
     }
     a.home--modal-link {
         display: inline-block;
+    }
+}
+@media (max-width: 767px) {
+    .copyright {
+        top: 10em;
     }
 }
 @media (max-width: 750px) {
@@ -7098,7 +7125,16 @@ a.home--modal-link {
         font-size: 14px;
     }
 }
-
+@media (max-width: 643px) {
+    .copyright {
+        top: 6em;
+        padding: 2em;
+        margin: 0 0.8em 0 0.1em;
+    }
+    .is-scrolled .header .copyright {
+        margin-top: -1em;
+    }
+}
 @media (max-width: 550px) {
     #portalMain .page-intro__main {
         font-size: 0.8em;
