--- a/portal/templates/gil/legal.html
+++ b/portal/templates/gil/legal.html
@@ -5,10 +5,8 @@
       <div class="page-intro page-intro--theme-brown-light">
         <div class="page-intro__content">
           <div class="simple-page-content">
-            <h1 class="page-intro__main">Legal</h1>
-            <p>Date of last revision: 1 September 2016</p>
-            <p>This section sets out the terms that apply to your use of the Movember website and the Movember mobile apps (together, Services).  Your continued use of our Services indicates to Movember that you agree with these General Terms, as updated from time to time.  We may change these General Terms from time to time, so please check back regularly.</p>
-            <p>Content created by Movember - Movember owns or license from third parties all of the trademarks, copyright and other intellectual property that exists in the Services.  You must not copy or reproduce in any form any of the graphics, logos or other material from our Services unless you have our specific permission.  For the avoidance of doubt, you have our permission to download material from the Downloads page on our website, subject to the restrictions noted on that page.</p>
+            <h1 class="page-intro__main">Privacy</h1>
+            <div>{{ content|safe }}</div>
           </div>
         </div>
       </div>
