--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -117,7 +117,7 @@
             </a>
           </div>
           <a class="logo" href="{{PORTAL}}/"></a>
-          <p class="copyright">©2017 Movember Foundation.  All rights reserved. A registered 501(c)3 non-profit organization.</p>
+          <p class="copyright">&copy;2017 Movember Foundation.  All rights reserved. A registered 501(c)3 non-profit organization.</p>
           {% if not user %}
             <div class="header__meta"><a href="#" class="menu button button--small button--white" data-toggle="modal" data-target="#modal-login">Log In</a><a href="#" class="menu button button--small button--white" data-toggle="modal" data-target="#modal-register">Join Us</a></div>
           {% endif %}
