reference GIL terms of conditions page to new LR item

--- a/portal/templates/gil/terms-and-conditions.html
+++ b/portal/templates/gil/terms-and-conditions.html
@@ -5,8 +5,7 @@
       <div class="page-intro page-intro--theme-brown-light">
         <div class="page-intro__content">
           <div class="simple-page-content">
-            <h1 class="page-intro__main">Terms &amp; Conditions</h1>
-            <div>{{ terms['asset']|safe if terms}}</div>
+            <div>{{ content|safe}}</div>
           </div>
         </div>
       </div>
