--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -15,7 +15,7 @@
             </div>
             <div>
               <label id="agreeLabel" data-agree="false">
-                <i class="fa fa-square-o fa-lg"></i> <span>{{ _("Check here to agree to these terms") }}</span>
+                <i class="fa fa-square-o fa-lg"></i> <span>{{ _("I consent and agree to the above terms.") }}</span>
               </label>
             </div>
             <br/>
