--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -104,6 +104,7 @@ div.orglist-selector {
   margin: 0 auto;
   label {
    font-weight: normal;
+   font-size: 0.95em;
   }
   input[type="checkbox"] {
     position: relative;
@@ -1605,16 +1606,27 @@ div.org-container input[type="checkbox"] {
    div.orglist-selector div.dropdown-menu #userOrgs{
      width: 180px !important;
    }
-   div.orglist-selector div.org-container label.org-label {
-     font-size: 0.8em;
-   }
+    div.orglist-selector div.org-container label.org-label, #adminTableToolbar #orglist-footer-container label span {
+      font-size: 0.8em;
+    }
 
-  .side-custom {
-    height: 37em;
-  }
-  .one-side {
-    height: 24em;
-  }
+    #adminTableToolbar #orglist-footer-container {
+      padding: 0.5em 1em;
+    }
+
+    #adminTableToolbar #orglist-footer-container input[type="checkbox"] {
+      top: 0;
+    }
+
+    .side-custom {
+      height: 37em;
+    }
+    .one-side {
+      height: 24em;
+    }
+    .timezone-container {
+      padding-bottom: 0;
+    }
 
 }
 
