--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -117,7 +117,6 @@
             </a>
           </div>
           <a class="logo" href="{{PORTAL}}/"></a>
-          <p class="copyright">&copy;2017 Movember Foundation.  All rights reserved. A registered 501(c)3 non-profit organization.</p>
           {% if not user %}
             <div class="header__meta"><a href="#" class="menu button button--small button--white" data-toggle="modal" data-target="#modal-login">Log In</a><a href="#" class="menu button button--small button--white" data-toggle="modal" data-target="#modal-register">Join Us</a></div>
           {% endif %}
@@ -159,6 +158,7 @@
         </ul>
         <div class="footer__logo-area"><a href="http://www.movember.com" target="_blank">
             <figure class="footer__logo--movember"></figure></a></div>
+        <div class="footer__logo-area copyright">&copy;2017 Movember Foundation.  All rights reserved. A registered 501(c)3 non-profit organization.</div>
       </footer>
   {% endblock %}
   {% block version %}
