remove redundent event listeners for updating patient's list, add error checking code for filter org list

--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -126,7 +126,7 @@ var AT = new AdminTool({{user.id}});
 
 $(document).ready(function() {
 
-  $("#adminTable").on("page-change.bs.table sort.bs.table reset-view.bs.table toggle.bs.table post-body.bs.table", function() {
+  $("#adminTable").on("sort.bs.table reset-view.bs.table toggle.bs.table", function() {
       AT.updateData();
    });
   setTimeout("AT.updateData();", 0);
