--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1565,10 +1565,7 @@ div.org-container input[type="checkbox"] {
   }
 
   div.search, div.columns {
-    font-size:0.9em;
-    margin-left: 0.1em;
-    margin-top:0;
-    margin-bottom: 0.5em;
+    display: none
   }
   div.columns {
     top: 4px;
