--- a/portal/templates/flask_user/login.html
+++ b/portal/templates/flask_user/login.html
@@ -10,6 +10,9 @@
     #mainDiv {
         background: none;
     }
+    .watermark {
+        display: none;
+    }
 </style>
 
 <div id="fullSizeBox" class="box-min-500">
