--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -7,6 +7,9 @@
     #mainDiv {
         background: none;
     }
+    .watermark {
+        display: none;
+    }
     #timeOutMessageContainer {
         margin: 1em auto;
         padding: 0.5em 1em;
