--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -153,7 +153,7 @@
         </ul>
         <ul class="nav-list nav-list--lower">
           <li class="nav-list__item"><a href="{{PORTAL}}/terms-and-conditions">Terms and Conditions</a></li>
-          <li class="nav-list__item"><a href="{{PORTAL}}/legal">Privacy</a></li>
+          <li class="nav-list__item"><a href="{{PORTAL}}/privacy">Privacy</a></li>
           <li class="nav-list__item"><a href="{{PORTAL}}/contact">Contact</a></li>
         </ul>
         <div class="footer__logo-area"><a href="http://www.movember.com" target="_blank">
@@ -208,7 +208,7 @@
              <form action="{{PORTAL}}/user/sign-in" method="POST" class="form" role="form">
               <input name="email" type="text" placeholder="Email Address" required>
               <input name="password" type="password" placeholder="Password" required>
-              <input class="button button-large button--teal button--login" type="submit" value="Log In">
+              <input id="btnLogin" class="button button-large button--teal button--login" type="submit" value="Log In">
               <br/><br/>
               <a href="{{PORTAL}}/user/forgot-password"><span class="box-modal__sub">Forgot your password?</span></a>
             </form>
@@ -588,10 +588,18 @@
                   e.preventDefault();
                   handleAccessCode();
                 };
-            })
+            });
+
 
             $("#accessCodeLink").on("click", function() {
                 handleAccessCode();
+            });
+
+            $("#password").on("keyup", function() {
+                if (e.keyCode == 13) {
+                  e.preventDefault();
+                  if ($("input[name='email']").val() != "") $("#btnLogin").trigger("click");
+                };
             });
 
             // Configure and start the session timeout monitor
