--- a/portal/templates/gil/terms-and-conditions.html
+++ b/portal/templates/gil/terms-and-conditions.html
@@ -5,7 +5,7 @@
       <div class="page-intro page-intro--theme-brown-light">
         <div class="page-intro__content">
           <div class="simple-page-content">
-            <div>{{ content|safe}}</div>
+            <div>{{ content["asset"]|safe if content}}</div>
           </div>
         </div>
       </div>
